# Memora

./: .gitignore  CMakeLists.txt
include/memora/: ma_api.h  mm.h  uapi_mm.h
src/: CMakeLists.txt  mm.c
testbed/: CMakeLists.txt  main.c
